--- a/day02/mldl01_주요모듈학습.ipynb
+++ b/day02/mldl01_주요모듈학습.ipynb
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "6d091b47",
    "metadata": {},
    "outputs": [],
@@ -1306,6 +1306,385 @@
     "# 모듈 사용\n",
     "from faker import Faker\n",
     "import faker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "7b29e791",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Vincent Henry'"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake = Faker()\n",
+    "fake.name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "ccdc4531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake = Faker(locale='ko-KR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "39f211d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "박지후\n",
+      "윤성수\n",
+      "김중수\n",
+      "백예지\n",
+      "류지현\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(fake.name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "b262f7f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'세종특별자치시 도봉구 도산대307가 지하858'"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake.address()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "93f8b97e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'성현황김마을 라동 670호'"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake.address_detail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "e703ee74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_data = [(fake.name(), fake.address()) for i in range(50)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "55c4132f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('장준영', '서울특별시 송파구 삼성22거리 278 (영식박면)'),\n",
+       " ('김경희', '광주광역시 동구 언주로 154 (민수장강면)'),\n",
+       " ('구은경', '부산광역시 서초구 언주255로 683 (은지강지마을)'),\n",
+       " ('서민석', '서울특별시 서대문구 언주6길 241-71 (종수김면)'),\n",
+       " ('김윤서', '인천광역시 구로구 개포가 560 (수빈전읍)'),\n",
+       " ('신상훈', '경기도 청주시 청원구 잠실7길 지하83'),\n",
+       " ('김보람', '서울특별시 용산구 백제고분가 13-16 (영식장마을)'),\n",
+       " ('박은정', '전라남도 동해시 서초대거리 741 (은경고읍)'),\n",
+       " ('유수진', '충청남도 원주시 서초중앙03길 132-64'),\n",
+       " ('김은경', '전라남도 부천시 원미구 논현0가 949 (예준박이마을)'),\n",
+       " ('김경수', '강원도 횡성군 잠실8가 727-73 (정수김김읍)'),\n",
+       " ('이보람', '울산광역시 서초구 언주거리 674-58'),\n",
+       " ('김경희', '인천광역시 북구 봉은사4로 270 (성진김이마을)'),\n",
+       " ('송지원', '경상남도 동두천시 영동대로 435 (준호황리)'),\n",
+       " ('류준영', '울산광역시 관악구 학동길 432 (지후류면)'),\n",
+       " ('허수민', '대구광역시 관악구 역삼거리 682'),\n",
+       " ('김시우', '경기도 서산시 서초중앙6길 982'),\n",
+       " ('이영진', '제주특별자치도 고양시 일산동구 선릉가 697 (현우박강마을)'),\n",
+       " ('김지후', '제주특별자치도 당진시 양재천로 727'),\n",
+       " ('유건우', '충청북도 포천시 논현길 910 (영순장김마을)'),\n",
+       " ('이상호', '부산광역시 종로구 개포거리 289-96'),\n",
+       " ('이성현', '울산광역시 서초구 논현523길 545'),\n",
+       " ('송현지', '세종특별자치시 송파구 백제고분996길 735 (춘자박오마을)'),\n",
+       " ('박상철', '경상북도 평택시 역삼14로 869'),\n",
+       " ('김영수', '인천광역시 강서구 양재천692로 172 (승현심동)'),\n",
+       " ('류은경', '인천광역시 동대문구 가락로 지하51 (현지오면)'),\n",
+       " ('김도윤', '충청북도 청주시 서원구 삼성가 767-89 (서윤이동)'),\n",
+       " ('박민서', '충청북도 안산시 상록구 잠실로 146'),\n",
+       " ('류광수', '충청북도 과천시 봉은사길 528-98 (순옥이마을)'),\n",
+       " ('김영식', '대전광역시 동대문구 가락41거리 202-78'),\n",
+       " ('최영미', '세종특별자치시 동구 오금거리 148-35 (도현김리)'),\n",
+       " ('이지영', '경상북도 예산군 개포거리 381'),\n",
+       " ('김재현', '강원도 화천군 오금70로 202 (경자이리)'),\n",
+       " ('김혜진', '제주특별자치도 김포시 강남대3가 566 (정식이마을)'),\n",
+       " ('이상호', '서울특별시 마포구 잠실6가 714'),\n",
+       " ('박병철', '대전광역시 동대문구 테헤란길 678'),\n",
+       " ('장준서', '인천광역시 중랑구 논현길 495 (미숙김진마을)'),\n",
+       " ('김성수', '대구광역시 성동구 서초대길 581-89'),\n",
+       " ('김서연', '충청북도 여주시 반포대거리 651'),\n",
+       " ('김혜진', '부산광역시 강동구 영동대0가 872-21 (정호남박읍)'),\n",
+       " ('박영철', '세종특별자치시 영등포구 강남대가 248-69'),\n",
+       " ('노영길', '세종특별자치시 중랑구 영동대거리 363-48 (시우김동)'),\n",
+       " ('김현주', '전라북도 보은군 가락로 753 (민재이면)'),\n",
+       " ('손지민', '충청북도 청주시 청원구 서초대4가 227-23'),\n",
+       " ('김예진', '충청남도 용인시 테헤란거리 지하458 (정수김김동)'),\n",
+       " ('김정식', '경상북도 음성군 오금01가 968 (시우서이마을)'),\n",
+       " ('양순옥', '제주특별자치도 수원시 팔달구 선릉130가 680-22 (정식김마을)'),\n",
+       " ('김성수', '세종특별자치시 영등포구 테헤란92로 386-90 (영호윤동)'),\n",
+       " ('성지민', '충청남도 양평군 반포대0가 지하386'),\n",
+       " ('남건우', '충청북도 파주시 잠실길 939 (영진김마을)')]"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "903bef99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy = Faker(locale='ko-KR')\n",
+    "dummy_data = [[dummy.name(), dummy.postcode(), dummy.address(), dummy.address_detail(), dummy.phone_number(), dummy.email()] for i in range(1000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "ff07d997",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>이름</th>\n",
+       "      <th>우편번호</th>\n",
+       "      <th>주소</th>\n",
+       "      <th>주소상세</th>\n",
+       "      <th>전화번호</th>\n",
+       "      <th>이메일</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>김정희</td>\n",
+       "      <td>17841</td>\n",
+       "      <td>대전광역시 종로구 서초중앙로 644</td>\n",
+       "      <td>재현이타워</td>\n",
+       "      <td>019-560-7939</td>\n",
+       "      <td>ehong@example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>이예원</td>\n",
+       "      <td>10715</td>\n",
+       "      <td>충청북도 서천군 테헤란로 767</td>\n",
+       "      <td>서영박송마을</td>\n",
+       "      <td>02-8875-0617</td>\n",
+       "      <td>sugja09@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>이영미</td>\n",
+       "      <td>56799</td>\n",
+       "      <td>대구광역시 중랑구 삼성754가 980-78 (지우김마을)</td>\n",
+       "      <td>은지박강마을 383호</td>\n",
+       "      <td>033-865-3263</td>\n",
+       "      <td>donghyeon29@example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>김상호</td>\n",
+       "      <td>66991</td>\n",
+       "      <td>대전광역시 강북구 개포로 696-73 (은영권면)</td>\n",
+       "      <td>수빈김조타운 109호</td>\n",
+       "      <td>018-942-1084</td>\n",
+       "      <td>sanghyeon46@example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>서정남</td>\n",
+       "      <td>86696</td>\n",
+       "      <td>광주광역시 남구 영동대826길 352 (채원박김동)</td>\n",
+       "      <td>종수고이연립</td>\n",
+       "      <td>010-7950-2063</td>\n",
+       "      <td>hanjihyeon@example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>이미영</td>\n",
+       "      <td>43552</td>\n",
+       "      <td>경상남도 고양시 도산대3로 422-20</td>\n",
+       "      <td>경자이주아파트 가동 001호</td>\n",
+       "      <td>055-094-9407</td>\n",
+       "      <td>sgim@example.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>송상철</td>\n",
+       "      <td>04217</td>\n",
+       "      <td>대구광역시 노원구 반포대1길 373-60 (진우김면)</td>\n",
+       "      <td>은영권마을 572호</td>\n",
+       "      <td>041-804-8172</td>\n",
+       "      <td>jiweonbag@example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>서영식</td>\n",
+       "      <td>08640</td>\n",
+       "      <td>제주특별자치도 수원시 장안구 선릉4거리 189-35</td>\n",
+       "      <td>승민송이타운</td>\n",
+       "      <td>061-085-9463</td>\n",
+       "      <td>gimseohyeon@example.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>이성훈</td>\n",
+       "      <td>35844</td>\n",
+       "      <td>서울특별시 남구 테헤란9가 443-25 (경숙이마을)</td>\n",
+       "      <td>영환김박아파트 B동 655호</td>\n",
+       "      <td>017-751-7597</td>\n",
+       "      <td>yeongho64@example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>권경수</td>\n",
+       "      <td>18433</td>\n",
+       "      <td>세종특별자치시 서대문구 서초중앙83로 597 (진우박면)</td>\n",
+       "      <td>은정류이아파트 바동 527호</td>\n",
+       "      <td>061-532-3908</td>\n",
+       "      <td>gimseongsu@example.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      이름   우편번호                               주소             주소상세  \\\n",
+       "0    김정희  17841              대전광역시 종로구 서초중앙로 644            재현이타워   \n",
+       "1    이예원  10715                충청북도 서천군 테헤란로 767           서영박송마을   \n",
+       "2    이영미  56799  대구광역시 중랑구 삼성754가 980-78 (지우김마을)      은지박강마을 383호   \n",
+       "3    김상호  66991      대전광역시 강북구 개포로 696-73 (은영권면)      수빈김조타운 109호   \n",
+       "4    서정남  86696     광주광역시 남구 영동대826길 352 (채원박김동)           종수고이연립   \n",
+       "..   ...    ...                              ...              ...   \n",
+       "995  이미영  43552            경상남도 고양시 도산대3로 422-20  경자이주아파트 가동 001호   \n",
+       "996  송상철  04217    대구광역시 노원구 반포대1길 373-60 (진우김면)       은영권마을 572호   \n",
+       "997  서영식  08640     제주특별자치도 수원시 장안구 선릉4거리 189-35           승민송이타운   \n",
+       "998  이성훈  35844    서울특별시 남구 테헤란9가 443-25 (경숙이마을)  영환김박아파트 B동 655호   \n",
+       "999  권경수  18433  세종특별자치시 서대문구 서초중앙83로 597 (진우박면)  은정류이아파트 바동 527호   \n",
+       "\n",
+       "              전화번호                      이메일  \n",
+       "0     019-560-7939        ehong@example.net  \n",
+       "1     02-8875-0617      sugja09@example.com  \n",
+       "2     033-865-3263  donghyeon29@example.net  \n",
+       "3     018-942-1084  sanghyeon46@example.net  \n",
+       "4    010-7950-2063   hanjihyeon@example.net  \n",
+       "..             ...                      ...  \n",
+       "995   055-094-9407         sgim@example.org  \n",
+       "996   041-804-8172    jiweonbag@example.net  \n",
+       "997   061-085-9463  gimseohyeon@example.org  \n",
+       "998   017-751-7597    yeongho64@example.net  \n",
+       "999   061-532-3908   gimseongsu@example.com  \n",
+       "\n",
+       "[1000 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column=['이름', '우편번호', '주소', '주소상세', '전화번호', '이메일']\n",
+    "df = pd.DataFrame(data=dummy_data, columns=column)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "c40dd19f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('./dummy_member.csv', index=False, encoding='utf-8')"
    ]
   }
  ],
