--- a/day02/mldl02_데이터전처리.ipynb
+++ b/day02/mldl02_데이터전처리.ipynb
@@ -1844,6 +1844,42 @@
    "cell_type": "markdown",
    "id": "d0bbcebe",
    "metadata": {},
+   "source": [
+    "#### 추가\n",
+    "\n",
+    "\n",
+    "- (데이터 - 평균) / 표준편차 -> 스케일링 불편\n",
+    "- 사이킷런에서 제공하고 있음 -> preprocessing.StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "1d0e899e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 표준스케일러 모듈 사용\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "5c128e75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (test_input - mean) / std를 대체\n",
+    "scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ec91c62",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
