--- a/day07/mldl01_Cats_and_Dogs_이진분류.ipynb
+++ b/day07/mldl01_Cats_and_Dogs_이진분류.ipynb
@@ -200,7 +200,9 @@
    "id": "452c7825",
    "metadata": {},
    "source": [
-    "<img src=\"../image/ml0021.png\" width=\"700\">"
+    "<img src=\"../image/ml0021.png\" width=\"700\">\n",
+    "\n",
+    "<img src=\"../image/ml0021_1.png\" width=\"700\">\n"
    ]
   },
   {
